Fixed various style issues that cropped up during styling of main navigation

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -7,15 +7,34 @@ html {
 #wrapper {
   max-width: 1250px;
   background-color: #fff;
-  margin: 0 auto;
+  margin: 10px auto;
   padding: 10px;
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+}
+
+#siteHeader {
+  max-height: 150px;
+
+
+
+  #masthead {
+    display: block;
+    margin: 0;
+    text-align: left;
+
+    img {
+      max-height: 150px;
+      margin-right: auto;
+    }
+  }
 }
 
 #{headings(1,6)} {
   font-family: $typeface-sansserif;
 }
 
-h2 {
+.pageHeadline,
+.postHeadline {
   font-size: 2.5rem;
   line-height: 1;
   margin: 0;
@@ -25,6 +44,14 @@ h2 {
 
 p {
   font-family: $typeface-serif;
+}
+
+main {
+  @include clearfix;
+}
+
+article {
+  @include clearfix;
 }
 
 footer#pageFooter {
